== Changelog ==
= 1.7.7 =
* Fix: Filter by brand widget shows incorrect brands under certain conditions
* Update: WC 3.8 compatibility
= 1.7.6 =
* Tested up to, bump
* Dev: New filter hook "woocommerce_product_brand_heading" for editing the "Brand" tab heading
* Fix: Some problems with the "Brand" product tab
* Fix: Avoid a possible JS conflict caused by "wp_localize_script"
= 1.7.5 =
* Fix: Stupid JS error introduced in the previous version
= 1.7.4 =
* Fix: Mismatched columns when a brand is added
* Tweak: Disable brand tab when product not have brand
* Dev: New filter hook 'pwb_dropdown_placeholder'
* Dev: New filter hooks 'pwb_carousel_prev' and 'pwb_carousel_next' for customize the carousel arrows
* Dev: Override templates via a theme
* Minor fixes and tweaks
= 1.7.3 =
* Enhancement: Performance improvements
* Fix: Breadcrumbs doesn't take in account pagination
= 1.7.2 =
* Feature: Now is possible to use %pwb-brand% in the product URLs
* Fix: Fatal error in some themes (like Salient)
* Fix: Some php notices and warnings fixed
* Fix: Don't show brand description/banner in paged
= 1.7.1 =
* Feature: Extends the [products] shortcode to allow 'brands' attribute
* Feature: The brands column is sortable now
* Catalan translation (thanks to Lluisma)
* Enhancement: Easier select brands page link in breadcrumbs
* Enhancement: Configure the brand banner and the brand description position independently
* Dev: New filter 'pwb_taxonomy_rewrite' to change the rewrite slug
* Dev: New filter 'pwb_taxonomy_with_front' to change default "with_front" value
* Fix: Fatal error in PHP5.4
= 1.7.0 =
* Feature: A-Z Listing shortcode
* Feature: New brands exporter/importer introduced
* Fix: Missing some brands to filter
* Fix: Coupon doesn’t work for product variations (thanks @gekomees)
* Fix: The brand description is not shown if there are no products
* Enhancement: wpautop() for brand descriptions
* Enhancement: Other filter by brand widget enhancements